<resources>
    <string name="label_schedule">Schedule</string>
    <string name="label_info">Info</string>
    <string name="label_experience">Experience</string>
    <string name="event_location">2019 Aula Magna • BELGIUM</string>
    <string name="event_dates">October 2nd / 3rd / 4th</string>
    <string name="label_get_started">Get started</string>
    <string name="error_odoo_server_error">Odoo Server Error</string>
    <string name="label_starred">Starred</string>
    <string name="scrolling_view_behavior">@string/appbar_scrolling_view_behavior</string>
    <string name="label_about">About</string>
    <string name="label_sponsors">Sponsors</string>
    <string name="label_odoo_xp">Odoo Experience</string>
    <string name="msg_odoo_xp">The official Odoo Experience app to be your co-pilot to navigate the conference.</string>
    <string name="label_made_with_love_in_india">Made with ❤ in India</string>
    <string name="label_how_to_get_there">How to get there?</string>
    <string name="get_there_address">Place Raymond Lemaire, 1  \n1348 Louvain-La-Neuve • Belgium</string>
    <string name="aula_magna_desc">The light is the Aula Magna’s main selling point. With its a vast glass house of 70 m long by 30 m wide, the building is on the edge of the lake that connects it to the town. Opened in 2001, this space offers a great venue for academic and corporate events, as well as cultural shows. The Aula Magna’s great hall, the Theater, can accommodate 850 to 1,100 people in front of its large stage of 380 m2.</string>
    <string name="aula_magna">Aula Magna</string>
    <string name="lauvain_name">Louvain-La-Neuve</string>
    <string name="lauvain_desc">Louvain-la-Neuve is a planned city in the municipality of Ottignies - Louvain-la-Neuve, Belgium, situated 30 km southeast of Brussels. This whole new city was built in 1971 to house the Catholic University of Leuven, which used to be located in Leuven, in the dutch region. To a great extent, Louvain-La-Neuve still lives following the rhythms of the university. This city is an example of the "automobile under" type of New Pedestrianism.</string>
    <string name="label_access_map">Access Map</string>
    <string name="label_by_car">By Car</string>
    <string name="by_car_detail_msg">From Brussels take Highway E411 (direction of Namur). Exit n° 8a. At the Round about located on the road N4, follow the signs \'Aula Magna\' or \'Odoo\'.</string>
    <string name="by_car_access_map">View Access Map</string>
    <string name="label_where_to_park">Where to park?</string>
    <string name="more_information">More Information</string>
    <string name="parking_info">Parking \'Grand Place\' is the closest to the Aula Magna. The general tariff for 1 day parking is €15 but you are eligible for a special Odoo rate of €12. Once you parked, keep your ticket and visit the Odoo Welcome Desk in the Hall of the Aula Magna to enjoy the discounted rate. We accept cards and cash as payment for your parking ticket. Before leaving the parking, make sure to insert your original parking ticket in the payment machine followed by the Odoo ticket as a method of payment.  </string>
    <string name="label_by_train">By Train</string>
    <string name="by_train_msg_1">Station is called \'Louvain-la-Neuve - Université\' which is linked to Ottigines station. Ottignies station is located on the line Brussels-Namur (2 trains per hour). Louvain-La-Neuve is 30 min away from Brussels. You’ll need to change train in Ottignies to take another train to \'Louvain-la-Neuve - Université\' (8 min). There are direct trains to Louvain-La-Neuve from Brussels, but these take more time.</string>
    <string name="by_train_msg_2">Coming from overseas, get off at Brussels North station (the best) or Brussels Midi station. All trains to Ottignies go trough these stations via Bruxelles-Central, Bruxelles-Nord, Bruxelles-Schuman and Bruxelles-Luxembourg.</string>
    <string name="train_schedule">Go to SNCB Schedules</string>
    <string name="label_by_plane">By Plane</string>
    <string name="by_plane_info">You can reach Louvain-la-Neuve by train. Four trains per hour leave the airport in direction of the station \'Bruxelles-Nord\', where you need to change train to make sure to take the train going to Ottigines then changing for \'Louvain-La-Neuve Université\' (see By train section).</string>
    <string name="label_arrival_in_zaven">Arrival in Brussels (Zaventem)</string>
    <string name="label_arrival_in_south">Arrival in Brussels South (Charleroi)</string>
    <string name="by_plane_info_south">Located at 40 km from Louvain-la-Neuve. Buses links the airport to the train station \'Charleroi Sud\'. To reach Louvain-la-Neuve, the fastest solution in daylight is to take a train for Ottignies where you’ll change to catch another train to \'Louvain-La-Neuve Université\'. The ride is just 8 min.</string>
    <string name="label_by_bus">By Bus</string>
    <string name="by_bus_info">From Bruxelles, there are special buses line. Schedules are available on the TEC website or by phone on +32 (0)10 23 53 53. Starting from Metro station \'Roodebeek\' passing via the Metro Station Crainhem/Kraainem. (Line is called Cbis or Conforto Bis).  \n\nStarting from Etterbeek train station passing via Metro station Delta. (Line is called C or Conforto).</string>
    <string name="label_tec_website">Go to TEC Website</string>
    <string name="by_bus_info_2">Starting from Metro station \'Roodebeek\' passing via the Metro Station Crainhem/Kraainem. (Line is called Cbis or Conforto Bis).  \n\nStarting from Etterbeek train station passing via Metro station Delta. (Line is called C or Conforto).</string>
    <string name="label_where_to_sleep">Where to sleep?</string>
    <string name="sleep_info">We have a partnership with 4 hotels in the region.</string>
    <string name="hotel_note">During booking, mention that you are planning to come for Odoo Experience. Book by Sep 6th to benefit from the discounted rates.</string>
    <string name="hotel_ibis"><![CDATA[IBIS Styles Hotel & Events]]></string>
    <string name="hotel_ibis_address">Boulevard de Lauzelle 61 – 1348 Ottignies</string>
    <string name="hotel_ibis_desc">This hotel is 14 minutes away by foot from our event.  \n- Single room: € 119 / night (breakfast &amp; wifi included) \n- Double room: € 129 / night (breakfast &amp; wifi included) \n- City tax: € 1.15 / pers. / night</string>
    <string name="label_booking">Booking</string>
    <string name="label_call">Call</string>
    <string name="label_email">Email</string>
    <string name="hotel_wavre_brussels">Novotel Wavre Brussels East</string>
    <string name="hotel_leonardo_address">Rue de la Wastinne 45 – 1301 Wavre</string>
    <string name="hotel_leonardo_desc">This hotel is 9 minutes away by car from the event. \nFree shuttle (need to be booked with the room). \n- Single room: € 115 / night (breakfast &amp; wifi included) \n- Double room: € 135 / night (breakfast &amp; wifi included) \n- City tax: € 1.1 / pers. / night></string>
    <string name="hotel_best_west">Best Western - Wavre Hotel</string>
    <string name="hotel_best_west_address">Avenue Lavoisier 12 – 1300 Wavre</string>
    <string name="hotel_best_west_desc">This hotel is 10 minutes away by car from our event.  \n- Single room: € 109 / night (breakfast &amp; wifi included) \n- Double room: € 119 / night (breakfast &amp; wifi included) \n- City tax: € 1 / pers. / night</string>
    <string name="for_more_info">For any emergencies,\nplease contact us:\n0032 473 37 40 83</string>
    <string name="hotel_martin_agora">Martin’s Agora City Resort</string>
    <string name="hotel_martin_agora_location">Rue de l\'Hocaille 1–3 – 1348 LLN</string>
    <string name="hotel_martin_agora_desc"><![CDATA[This hotel is literally 1 minute away by foot from our event.  \n- Single room: € 129 / night (breakfast, wifi & taxes included) \n- Double room: € 139 / night (breakfast, wifi & taxes included) \n- City tax: € 1 / pers. / night]]></string>
    <string name="label_open_website">Open Website</string>
    <string name="label_use_discount_code_to_book">Use our discount code <b>Odoo2019</b></string>
    <string name="app_label">Odoo Experience</string>
    <string name="label_search">Search</string>
    <string name="str_track_duration_only">%s minutes</string>
    <string name="str_track_duration_location">%s minutes / %s</string>
    <string name="track_detail_time_date">%s - %s (%s minutes)</string>
    <string name="label_speaker">Speaker</string>
    <string name="unable_to_star">Unable to star track</string>
    <string name="track_added_to_starred">Track added to your starred items.</string>
    <string name="track_removed_from_starred">Track removed from starred items.</string>
    <string name="label_search_track">Search track</string>
    <string name="label_filter_track">Filter track</string>
    <string name="label_filters">Filters</string>
    <string name="label_topics">Topics</string>
    <string name="label_speakers">Speakers</string>
    <string name="label_location">Location</string>
    <string name="title_n_events">%d Talks</string>
    <string name="label_reset">Reset</string>
    <string name="label_no_data_found">No events match your current filters.</string>
    <string name="msg_no_starred_tracks">No starred tracks.</string>
    <string name="label_please_wait">Please Wait</string>
    <string name="track_day_header">Day %d</string>
    <string name="label_share">Share</string>
    <string name="label_ok">Ok</string>
    <string name="title_upcoming_session_in_10_min">Upcoming session in 10 minutes</string>
    <string name="track_name_by">%s by %s</string>
    <string name="channel_name">Odoo Experience</string>
    <string name="channel_description">Odoo Experience Session reminder notifications.</string>
    <string name="str_track_duration_hour_only">%s hour</string>
    <string name="label_rate_us">Rate Us</string>
    <string name="label_wifi">Wifi</string>
    <string name="label_taxis">Taxis</string>
    <string name="label_contact">Contact</string>
    <string name="label_taxi_lln">Taxi LLN</string>
    <string name="taxi_lln_address">Rue Charles de Loupoigne, 15\n1348 Louvain-la-Neuve\n0487/37 72 76\n(RDV Arrêt de bus centre commercial/en bas des escaliers)</string>
    <string name="tag_website_taxi_lln">http://www.taxilln.be</string>
    <string name="tag_taxi_lln_call">0487377276</string>
    <string name="label_taxi_blancs">Taxis Blancs d’Ottignies-LLN</string>
    <string name="taxi_blancs_address">Basé à Ottignies et Mont-St-Guibert\nRue de l\'Europe 3 - 1342 Limelette\n010/41 97 41 - 0475/91 61 85 - 0475/97 71 83\n(RDV antenne communale)</string>
    <string name="tag_taxi_blancs_call">0475977183</string>
    <string name="tag_website_taxi_blancs">https://www.taxiblanc.be</string>
    <string name="label_taxi_cd">CD Taxi</string>
    <string name="taxi_cd_address">Basé à Ottignies\nRue de la Chapelle 9A - 1340 Ottignies\n0476/98 35 17</string>
    <string name="tag_taxicd_call">0476983517</string>
    <string name="label_mail">Mail</string>
    <string name="tag_mail_taxi_theo">buhigirot@yahoo.fr</string>
    <string name="tag_taxitheo_call">0470618398</string>
    <string name="label_taxi_theo">THEO Taxi</string>
    <string name="taxi_theo_address">Basé à Ottignies\n0470/61 83 98</string>
    <string name="label_taxi_broeckx">Taxi Broeckx</string>
    <string name="taxi_broeckx_address">Basé à Ottignies et Chastre\n047143 84 99</string>
    <string name="tag_taxi_broeckx_call">0471/438499</string>
    <string name="tag_mail_taxi_broeckx">info@taxi-broeckx.be</string>
    <string name="tag_website_taxi_broeckx">https://taxi-ottignies-lln.be</string>
    <string name="label_taxi_az">AZ Taxi</string>
    <string name="taxi_az_address">Basé à Ottignies et Vieux Genappe\n0470/20 94 09</string>
    <string name="tag_taxiaz_call">0470209409</string>
</resources>