<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bntResetFilters"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:text="@string/label_reset"
            android:visibility="gone" />

        <TextView
            android:id="@+id/filterTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:padding="@dimen/default_16dp"
            android:text="@string/label_filters"
            android:textColor="#414141"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/closeDialog"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:padding="12dp"
            android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:tint="#414141" />
    </RelativeLayout>

    <EditText
        android:id="@+id/edtSearchFilters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_4dp"
        android:layout_marginLeft="@dimen/default_16dp"
        android:layout_marginRight="@dimen/default_16dp"
        android:background="@drawable/filter_search_input"
        android:fontFamily="@font/open_sans"
        android:hint="@string/label_search"
        android:paddingBottom="@dimen/default_8dp"
        android:paddingLeft="@dimen/default_16dp"
        android:paddingRight="@dimen/default_16dp"
        android:paddingTop="@dimen/default_8dp"
        android:textSize="13sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/default_16dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_8dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/label_topics"
                    android:textAllCaps="true"
                    android:textColor="#cc000000"
                    android:textStyle="bold" />

                <com.google.android.flexbox.FlexboxLayout
                    android:id="@+id/flexTopics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_16dp"
                    app:flexDirection="row"
                    app:flexWrap="wrap" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_8dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/label_location"
                    android:textAllCaps="true"
                    android:textColor="#cc000000"
                    android:textStyle="bold" />

                <com.google.android.flexbox.FlexboxLayout
                    android:id="@+id/flexLocations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_16dp"
                    app:flexDirection="row"
                    app:flexWrap="wrap" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_8dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/label_speakers"
                    android:textAllCaps="true"
                    android:textColor="#cc000000"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <com.google.android.flexbox.FlexboxLayout
                    android:id="@+id/flexSpeakers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_16dp"
                    android:visibility="gone"
                    app:flexDirection="row"
                    app:flexWrap="wrap" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>